<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3EBE4"
    tools:context=".Login">
    <LinearLayout
        android:id="@+id/loginll1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="47dp">

        <ImageView
            android:layout_width="254dp"
            android:layout_height="131dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginll2"
        android:orientation="vertical"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_below="@id/loginll1">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shadow"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/edittext_shadow"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/gradient_green"
            android:text="@string/entrar"
            android:textColor="@android:color/white" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:id="@+id/lblRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newaccount"
                android:textColor="#8c8c8c"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resetpass"
                android:textColor="#8c8c8c" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ellipses"
            android:scaleType="fitEnd"/>
    </LinearLayout>

</RelativeLayout>
